--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="./assets/styles.css" />
+		<title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+	</head>
+	<body>
+		<div class="card">
+			<div class="img-container"><img src="./images/drawers.jpg" alt="" /></div>
+			<div class="card-info">
+				<div class="title">
+					<h1>
+						Shift the overall look and feel by adding these wonderful touches to
+						furniture in your home
+					</h1>
+				</div>
+				<div class="para">
+					<p>
+						Ever been in a room and felt like something was missing? Perhaps it
+						felt slightly bare and uninviting. I’ve got some simple tips to help
+						you make any room feel complete.
+					</p>
+				</div>
+				<div class="card-info-bottom">
+					<div class="left">
+            <img src="./images/avatar-michelle.jpg" alt="" />
+            <div class="person-info">
+						<h4>Michelle Appleton</h4>
+            <p>28 June 2020</p>
+          </div>
+					</div>
+					<div class="right"><img src="./images/icon-share.svg" alt=""></div>
+				</div>
+			</div>
+		</div>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by
+			<a href="https://saiarunesh.github.io/portfolio/">Sai Arunesh</a>.
+		</div>
+	</body>
 </html>
